refactor: return remaining movies list on delete
