# docs/swagger.json
@@ -10,14 +10,14 @@
     "paths": {
         "/movie/{id}": {
             "get": {
-                "description": "get single movie based on id",
+                "description": "get movie based on id",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Get movie",
+                "summary": "Get single movie",
                 "parameters": [
                     {
                         "type": "integer",
@@ -40,7 +40,7 @@
                 }
             },
             "delete": {
-                "description": "delete movie based on id",
+                "description": "delete movie based on id and returns the remaining movies list",
                 "consumes": [
                     "application/json"
                 ],
@@ -58,8 +58,14 @@
                     }
                 ],
                 "responses": {
-                    "204": {
-                        "description": "No Content"
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/main.Movie"
+                            }
+                        }
                     }
                 }
             }
